# svalinn

./: .gitignore  README.md  pyproject.toml
svalinn/: __init__.py  pruner.py
svalinn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pruner.py
